# soar

./: .dockerignore  .env  .env.template  .gitignore  .pre-commit-config.yaml  Criteria Pollutants Annual Report Business Rules.docx  Dockerfile  ENVISTA_CLIENT_INTEGRATION.md  README.md  STAGING_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml  test_trv_annual_output.csv  test_trv_output_v2.csv
.github/: copilot-instructions.md  pr_body.md
.github/workflows/: ci.yml
datarepo_test/raw/aqs/logs/: annual_43218_13-Butadiene_2025-10-13T02-53-52Z.json  annual_43503_Acetaldehyde_2025-10-13T02-53-42Z.json  annual_43509_Acrolein_2025-10-13T02-53-57Z.json  annual_45201_Benzene_2025-10-13T02-53-47Z.json  annual_85103_Arsenic-Total_2025-10-13T02-54-22Z.json  annual_85110_Cadmium-Total_2025-10-13T02-54-27Z.json  annual_85112_Chromium-Total_2025-10-13T02-54-32Z.json  annual_85113_Cobalt-Total_2025-10-13T02-54-37Z.json  annual_85128_Lead-Total_2025-10-13T02-55-02Z.json  annual_85132_Manganese-Total_2025-10-13T02-55-07Z.json  annual_85136_Nickel-Total_2025-10-13T02-55-12Z.json  annual_85154_Selenium-Total_2025-10-13T02-55-17Z.json
datarepo_test/raw/aqs/monitors/: monitors_Arsenic-Total.csv  monitors_Benzene.csv  monitors_Carbon-monoxide.csv  monitors_Ozone.csv  monitors_PM10-LC.csv  monitors_PM10-Total-0-10um-STP.csv  monitors_PM2.5-Local-Conditions.csv  (+1 more)
metadata/: aqsQualifiers.csv  aqsSiteParameters.csv  aqsSiteParameters_error.json  aqs_availability.json  fields_sampleData.json
ops/: dimAQI.csv  dimPollutant.csv  dimRegions.dbf  dimRegions.sbn  dimRegions.sbx  dimRegions.shp  dimRegions.shp.xml  dimRegions.shx  dimTRV.csv  optional-requirements.txt  parameters.csv  requirements.txt
pipelines/aqs/: aqi_daily_transform_run.py  aqs_service_run.py  metadata_run.py  monitors_run.py  monitors_sample_run.py  monitors_transform_run.py  run_aqi_daily_consolidation.py  run_aqi_daily_transform.py  run_aqs_service.py  run_dim_tables.py  run_env_service.py  run_fct_criteria_daily.py  run_fct_ozone_dv.py  run_fct_ozone_hourly.py  run_fct_pm25_dv.py  run_fct_pm25_hourly.py  run_fct_toxics_annual.py  run_fct_toxics_sample.py  run_fct_wood_smoke_toxics.py  run_metadata.py  run_monitors.py  run_monitors_transform.py  run_pm25_only.py  run_qualifiers_toxics.py  run_staging_all.py  run_trv_only.py  run_wildfire_consolidation.py  sample_run.py  test_trv.py  test_trv_annual.py
pipelines/envista/: run_env_service.py  run_env_transform.py
src/: config.py  logging_config.py  utils.py
src/aqs/: _client.py
src/aqs/extractors/: aqs_service.py  data.py  hms.py  measurements.py  monitors.py  site_extractors.py
src/aqs/transformers/: aqi_daily.py  monitor_region.py  monitors.py  sample_hourly.py  trv_annual.py  trv_sample.py
src/envista/: __init__.py  _env_client.py  measurements.py  monitors.py  test.py
src/envista/extractors/: measurements.py  monitors.py
src/envista/transformers/: calculate_aqi.py  transform_daily.py  transform_env.py  transform_env_hourly.py
src/loaders/: filesystem.py
src/nei/: test.py
src/schemas/: monitors.py
src/soar/: config.py
src/soar/aqs/: _client.py
src/soar/loaders/: filesystem.py
src/stage/: consolidate_aqi_daily.py  consolidate_dim_pollutant.py  consolidate_dim_sites.py  consolidate_fct_criteria_daily.py  consolidate_fct_ozone_dv.py  consolidate_fct_ozone_hourly.py  consolidate_fct_pm25_dv.py  consolidate_fct_pm25_hourly.py  consolidate_fct_toxics_annual.py  consolidate_fct_toxics_sample.py  consolidate_fct_wood_smoke_toxics.py  consolidate_wildfire.py  test.py
tests/: conftest.py  test_client_retry.py  test_consolidate_aqi_daily.py  test_envista_transformers.py  test_extractors.py  test_monitors.py  test_transformers_schema.py
tests/fixtures/: sample_monitors.csv
(+29 files in other folders)
