[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soar-pipeline"
version = "1.0.0"
description = "SOAR Data Pipeline for EPA AQS Air Quality Data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Oregon DEQ Air Data Team", email = "airdata@deq.state.or.us"},
]
maintainers = [
    {name = "Oregon DEQ Air Data Team", email = "airdata@deq.state.or.us"},
]
keywords = ["air-quality", "epa", "aqs", "data-pipeline", "environmental"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "pyaqsapi>=0.1.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.0",
    "requests>=2.28.0",
    "pandera>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
soar-run-monitors = "pipelines.aqs.run_monitors:run"
soar-run-metadata = "pipelines.aqs.run_metadata:run"
soar-run-aqs-service = "pipelines.aqs.run_aqs_service:run"
soar-run-trv-only = "pipelines.aqs.run_trv_only:main"

[project.urls]
Homepage = "https://github.com/OR-Dept-Environmental-Quality/soar_pipeline"
Repository = "https://github.com/OR-Dept-Environmental-Quality/soar_pipeline"
Issues = "https://github.com/OR-Dept-Environmental-Quality/soar_pipeline/issues"
Documentation = "https://github.com/OR-Dept-Environmental-Quality/soar_pipeline#readme"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json", "*.md"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"] # assert false

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "src/logging_config.py",  # logging setup
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]